--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,78 @@ ul {
   margin: 0px auto;
 }
 
+h1, h2, h3, h4, h5, h6, button {
+  font-family: 'Fira Sans', serif;
+}
+
+section {
+  padding: 50px 0;
+}
+
+@media (max-width: 768px) {
+  section {
+    padding: 25px 0;
+  }
+}
+
+.title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 26px;
+  text-align: center;
+}
+
+.title__desc {
+  text-align: center;
+  font-size: 16px;
+}
+
+.title span {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title span::before, .title span::after {
+  position: absolute;
+  content: '';
+  width: 30px;
+  height: 2px;
+  background-color: #ffa200;
+  top: 50%;
+  z-index: 1;
+}
+
+.title span::before {
+  left: -50px;
+}
+
+.title span::after {
+  right: -50px;
+}
+
+@media (max-width: 768px) {
+  .title span {
+    font-size: 22px;
+  }
+}
+
+.title__img {
+  width: 45px;
+  margin-right: 15px;
+}
+
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
   width: 0.6rem;
@@ -71,18 +143,33 @@ ul {
 }
 
 .header-scroll {
-  background: linear-gradient(11deg, #0191f5, #28bbc2);
+  background: #28bbc2;
+  -webkit-transition: background .3s;
+  transition: background .3s;
+  color: #fff;
 }
 
 .header .button {
-  display: none;
-  padding: 12px 0;
+  height: auto;
 }
 
 .header .button--ghost {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
   white-space: nowrap;
-  background-color: #fee62e;
+  background: #08c;
+  color: #fff;
 }
 
 .header .nav {
@@ -99,11 +186,16 @@ ul {
 }
 
 .header .nav__logo {
-  width: 70px;
+  width: 50px;
 }
 
 .header .nav__logo img {
   width: 100%;
+}
+
+.header .nav__img {
+  width: 25px;
+  margin-right: 7px;
 }
 
 .header .nav__tg {
@@ -125,11 +217,36 @@ ul {
 
 .header .nav__item {
   margin: 0 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header .nav__link {
   text-transform: uppercase;
   font-size: 15px;
+  position: relative;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+.header .nav__link::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  background: rgba(0, 0, 0, 0.25);
+  height: 1px;
+  bottom: -7px;
+  -webkit-transition: width .3s;
+  transition: width .3s;
+}
+
+.header .nav__link:hover::after {
+  width: 100%;
 }
 
 .header .nav__toggle {
@@ -170,7 +287,7 @@ ul {
 }
 
 .legal .slider {
-  width: 50%;
+  width: 35%;
 }
 
 .legal .slider__item {
@@ -193,7 +310,7 @@ ul {
 }
 
 .legal__info {
-  width: 47%;
+  width: 55%;
   margin-left: auto;
 }
 
@@ -280,7 +397,8 @@ ul {
 }
 
 .legal .places__button button {
-  background-color: #fee62e;
+  background: #ff4b55;
+  color: #fff;
   border: none;
 }
 
@@ -433,82 +551,57 @@ ul {
   }
 }
 
+.result {
+  padding-bottom: 20px;
+}
+
 .result__inner {
   padding: 20px 0;
 }
 
-.result__title {
+.result__text {
+  font-size: 20px;
   text-align: center;
-  display: block;
-  text-transform: uppercase;
-  font-weight: normal;
-  padding-bottom: 20px;
 }
 
-.result__title p {
-  position: relative;
-  display: inline;
+.result__text span {
+  color: #ffa200;
 }
 
-.result__title p::before, .result__title p::after {
-  position: absolute;
-  content: '';
-  width: 30px;
-  height: 2px;
-  background-color: #ffa200;
-  top: 50%;
-  z-index: 1;
-}
-
-.result__title p::before {
-  left: -50px;
-}
-
-.result__title p::after {
-  right: -50px;
-}
-
-.result .benefits {
+.benefits {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding-bottom: 50px;
+  margin-top: 30px;
 }
 
-.result .benefits__item {
+.benefits__item {
   max-width: 220px;
   text-align: center;
 }
 
-.result .benefits__icon {
+.benefits__icon {
   padding-bottom: 15px;
 }
 
-.result .benefits__icon i {
+.benefits__icon i {
   font-size: 70px;
   color: #2a75ff;
 }
 
-.result .benefits__title {
+.benefits__title {
   color: #2a75ff;
   font-weight: 400;
-  font-size: 26px;
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 
-.result .benefits__text {
-  font-size: 14px;
-  line-height: 15px;
-}
-
-.result__text {
-  text-align: center;
-  font-weight: 500;
-}
-
-.result__text span {
-  color: #ff9900;
+.benefits__text {
+  font-size: 17px;
+  line-height: 1.2;
 }
 
 .reviews {
@@ -557,6 +650,13 @@ ul {
 
 .reviews__slider {
   margin: 0px -7px;
+  margin-top: 40px;
+}
+
+@media (max-width: 768px) {
+  .reviews__slider {
+    margin-top: 20px;
+  }
 }
 
 .reviews__slider-item {
@@ -581,7 +681,9 @@ ul {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background-color: transparent;
+  color: #fff;
+  background: #08c;
+  border-radius: 50%;
 }
 
 .reviews .slick-prev {
@@ -593,7 +695,7 @@ ul {
   /* FontAwesome Unicode */
   font-family: 'Font Awesome 5 Pro';
   display: inline-block;
-  font-size: 40px;
+  font-size: 25px;
 }
 
 .reviews .slick-next {
@@ -605,7 +707,7 @@ ul {
   /* FontAwesome Unicode */
   font-family: 'Font Awesome 5 Pro';
   display: inline-block;
-  font-size: 40px;
+  font-size: 25px;
 }
 
 .reviews .slick-dots {
@@ -642,6 +744,10 @@ ul {
   position: relative;
 }
 
+.reach .container {
+  padding-bottom: 35px;
+}
+
 .reach svg {
   position: absolute;
   bottom: -2px;
@@ -662,37 +768,30 @@ ul {
 
 .reach__title {
   font-weight: 500;
-  padding-bottom: 20px;
 }
 
-.reach__desc {
-  font-size: 13px;
-  font-weight: 800;
-  padding-bottom: 20px;
-}
-
-.reach__text {
-  font-size: 16px;
-  font-weight: 500;
-  padding-bottom: 20px;
+.reach__list {
+  margin-top: 30px;
 }
 
 .reach__item {
   font-size: 17px;
   padding-bottom: 15px;
   position: relative;
-  margin-left: 30px;
+  padding-left: 15px;
 }
 
 .reach__item:before {
   position: relative;
   background-image: url("../img/free-icon-stopwatch-148941.png");
-  background-size: 20px 20px;
+  background-size: 30px 30px;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   content: '';
   left: -10px;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
   background-repeat: no-repeat;
 }
 
@@ -709,9 +808,15 @@ ul {
   margin-left: auto;
   margin-right: auto;
   max-width: 400px;
+  width: 300px;
   padding: 15px;
   position: relative;
   border-radius: 10px;
+}
+
+.reach .form__error {
+  font-size: 16px;
+  margin-top: 5px;
 }
 
 .reach .form__title {
@@ -745,14 +850,7 @@ ul {
 }
 
 .reach .form .active > .form__placeholder {
-  top: 5px;
-  text-transform: uppercase;
-  letter-spacing: 0.8px;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 13px;
+  display: none;
 }
 
 .reach .form__input {
@@ -765,30 +863,18 @@ ul {
   border-radius: 3px;
   color: #e0e0e0;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 4px 15px black;
-          box-shadow: 0px 4px 15px black;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   font-weight: 300;
   font-size: 19px;
   line-height: 23px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  padding-left: 50px;
+  padding-left: 15px;
   padding-top: 10px;
   padding-right: 5px;
   font-family: Montserrat;
   outline: none;
-}
-
-.reach .form__input--name {
-  background-position: 16px;
-  background-image: url(../images/first-name_icon.svg);
-  background-repeat: no-repeat;
-}
-
-.reach .form__input--phone {
-  background-position: 16px;
-  background-image: url(../images/phone_icon.svg);
-  background-repeat: no-repeat;
 }
 
 .reach .form__input:hover, .reach .form__input:focus {
@@ -873,7 +959,7 @@ ul {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  left: 50px;
+  left: 15px;
   display: block;
   white-space: nowrap;
   letter-spacing: 0.2px;
@@ -886,26 +972,44 @@ ul {
 }
 
 .reach .form__btn {
+  width: 100%;
   display: block;
-  border: 2px solid #3696da;
-  background-color: rgba(14, 126, 227, 0);
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-  margin-left: auto;
-  margin-right: auto;
+  color: #fff;
+  background: #ff4b55;
 }
 
 .todo__inner {
   padding: 30px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.todo__left {
+  width: 55%;
+}
+
+.todo__right {
+  width: 30%;
 }
 
 .todo__title {
-  font-weight: 500;
-  padding-bottom: 20px;
-  text-transform: uppercase;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 20px;
+  padding-left: 52px;
+}
+
+.todo .title__desc {
+  text-align: left;
+  margin-bottom: 40px;
 }
 
 .todo__desc {
@@ -916,32 +1020,30 @@ ul {
 }
 
 .todo__list {
-  padding-left: 30px;
+  padding-left: 50px;
   list-style: none;
 }
 
 .todo__item {
-  font-size: 12px;
-  font-weight: 700;
-  padding-bottom: 40px;
-  line-height: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  padding-bottom: 30px;
   position: relative;
 }
 
-.todo__item span {
-  font-weight: 500;
-  padding-bottom: 20px;
+.todo__item h3 {
+  font-size: 18px;
 }
 
 .todo__item::before {
   content: '';
   position: absolute;
-  background-size: 20px 20px;
+  background-size: 30px 30px;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   content: '';
-  left: -30px;
+  left: -50px;
   background-repeat: no-repeat;
 }
 
@@ -961,29 +1063,14 @@ ul {
   background-image: url(../img/list-numbers/free-icon-4-3601641.png);
 }
 
-.todo__button {
-  display: block;
-  text-align: center;
-}
-
-.todo__button button {
-  background-color: #fee62e;
+.todo .button {
+  background: #08c;
+  color: #fff;
 }
 
 .info {
   position: relative;
-}
-
-.info #canvas-basic {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
+  background: #ebedec;
 }
 
 .info__inner {
@@ -991,10 +1078,7 @@ ul {
 }
 
 .info__title {
-  font-weight: 500;
-  padding-bottom: 20px;
-  text-transform: uppercase;
-  color: white;
+  color: #000;
 }
 
 .info .text-window {
@@ -1011,6 +1095,7 @@ ul {
 
 .info .text-window__title {
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .info .text-window__title span {
@@ -1041,13 +1126,30 @@ ul {
 }
 
 .info__button {
-  display: block;
   text-align: center;
+  position: relative;
+  display: block;
+  width: 200px;
+  margin: 0 auto;
 }
 
 .info__button button {
-  background-color: #fee62e;
+  background-color: #ff4b55;
+  color: #fff;
   margin-bottom: 10px;
+}
+
+.info__button button.first::after {
+  position: absolute;
+  top: 42%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 0;
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  background: url(../img/icon-double-arrow.svg) center/cover no-repeat;
 }
 
 .faq__inner {
@@ -1359,7 +1461,8 @@ ul {
     -webkit-transition: 0.4s;
     transition: 0.4s;
     border-radius: 0 0 40px 40px;
-    background: linear-gradient(131deg, #0191f5, #28bbc2);
+    background: #28bbc2;
+    color: #fff;
   }
   .header .nav__menu.show-menu {
     top: 0px;
@@ -1385,9 +1488,6 @@ ul {
   }
   .header .nav__link {
     font-weight: 500;
-  }
-  .header .nav .button.button--ghost {
-    display: inline-block;
   }
   .header .nav__close {
     font-size: 50px;
