--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,25 @@ section {
   text-align: center;
 }
 
+@media (max-width: 578px) {
+  .title {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 530px) {
+  .title {
+    font-size: 20px;
+    padding-left: 0 !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+  .title__img {
+    display: none;
+  }
+}
+
 .title__desc {
   text-align: center;
   font-size: 16px;
@@ -86,6 +105,12 @@ section {
   z-index: 1;
 }
 
+@media (max-width: 530px) {
+  .title span::before, .title span::after {
+    display: none;
+  }
+}
+
 .title span::before {
   left: -50px;
 }
@@ -103,6 +128,12 @@ section {
 .title__img {
   width: 45px;
   margin-right: 15px;
+}
+
+@media (max-width: 578px) {
+  .title__img {
+    width: 25px;
+  }
 }
 
 /*=============== SCROLL BAR ===============*/
@@ -170,6 +201,15 @@ section {
   white-space: nowrap;
   background: #08c;
   color: #fff;
+}
+
+@media (max-width: 375px) {
+  .header .button--ghost {
+    font-size: 16px;
+  }
+  .header .button--ghost img {
+    display: none;
+  }
 }
 
 .header .nav {
@@ -611,7 +651,6 @@ section {
 
 .reviews__inner {
   position: relative;
-  padding: 30px 0;
 }
 
 .reviews__title {
@@ -766,12 +805,27 @@ section {
       justify-content: space-around;
 }
 
+@media (max-width: 768px) {
+  .reach__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .reach__title {
   font-weight: 500;
 }
 
 .reach__list {
   margin-top: 30px;
+}
+
+@media (max-width: 768px) {
+  .reach__list {
+    text-align: center;
+  }
 }
 
 .reach__item {
@@ -978,6 +1032,12 @@ section {
   background: #ff4b55;
 }
 
+@media (max-width: 530px) {
+  .todo {
+    text-align: center;
+  }
+}
+
 .todo__inner {
   padding: 30px 0;
   display: -webkit-box;
@@ -991,12 +1051,37 @@ section {
           align-items: center;
 }
 
+@media (max-width: 768px) {
+  .todo__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .todo__left {
   width: 55%;
 }
 
+@media (max-width: 768px) {
+  .todo__left {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
+
 .todo__right {
   width: 30%;
+}
+
+@media (max-width: 768px) {
+  .todo__right {
+    width: 100%;
+    height: 800px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
 }
 
 .todo__title {
@@ -1012,6 +1097,18 @@ section {
   margin-bottom: 40px;
 }
 
+@media (max-width: 768px) {
+  .todo .title__desc {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 530px) {
+  .todo .title__desc {
+    text-align: center;
+  }
+}
+
 .todo__desc {
   font-size: 13px;
   font-weight: 800;
@@ -1024,6 +1121,12 @@ section {
   list-style: none;
 }
 
+@media (max-width: 530px) {
+  .todo__list {
+    padding-left: 0;
+  }
+}
+
 .todo__item {
   font-size: 16px;
   font-weight: 300;
@@ -1033,6 +1136,18 @@ section {
 
 .todo__item h3 {
   font-size: 18px;
+}
+
+@media (max-width: 530px) {
+  .todo__item h3 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .todo__item {
+    padding-bottom: 20px;
+  }
 }
 
 .todo__item::before {
@@ -1063,9 +1178,24 @@ section {
   background-image: url(../img/list-numbers/free-icon-4-3601641.png);
 }
 
+@media (max-width: 530px) {
+  .todo__item {
+    text-align: center;
+  }
+  .todo__item::before {
+    display: none;
+  }
+}
+
 .todo .button {
   background: #08c;
   color: #fff;
+}
+
+@media (max-width: 530px) {
+  .todo .button {
+    display: inline-block;
+  }
 }
 
 .info {
@@ -1084,13 +1214,73 @@ section {
 .info .text-window {
   background-color: #fff;
   opacity: 0.9;
-  margin: 30px 0;
   padding: 30px;
   border-radius: 20px;
 }
 
+@media (max-width: 578px) {
+  .info .text-window {
+    padding: 15px;
+  }
+}
+
+.info .text-window_first {
+  margin-top: 30px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  position: relative;
+}
+
+.info .text-window_first img {
+  position: absolute;
+  right: 30px;
+  top: 60px;
+  width: 270px;
+  border-radius: 15px;
+}
+
+@media (max-width: 768px) {
+  .info .text-window_first img {
+    position: static;
+    display: block;
+    margin: 10px auto;
+  }
+}
+
+.info .text-window_first .first {
+  padding-right: 290px;
+}
+
+@media (max-width: 768px) {
+  .info .text-window_first .first {
+    padding-right: 0;
+  }
+}
+
+.info .text-window_first .second {
+  padding-right: 290px;
+}
+
+@media (max-width: 768px) {
+  .info .text-window_first .second {
+    padding-right: 0;
+  }
+}
+
+.info .text-window_first .third {
+  padding-right: 290px;
+}
+
+@media (max-width: 768px) {
+  .info .text-window_first .third {
+    padding-right: 0;
+  }
+}
+
 .info .text-window#toggle-example {
   display: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .info .text-window__title {
@@ -1129,266 +1319,111 @@ section {
   text-align: center;
   position: relative;
   display: block;
-  width: 200px;
   margin: 0 auto;
 }
 
 .info__button button {
-  background-color: #ff4b55;
   color: #fff;
   margin-bottom: 10px;
 }
 
+.info__button button.first {
+  background-color: #ff4b55;
+  margin-top: 30px;
+}
+
 .info__button button.first::after {
-  position: absolute;
-  top: 42%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  right: 0;
   content: '';
-  display: block;
+  display: inline-block;
+  margin-left: 15px;
   width: 15px;
   height: 15px;
   background: url(../img/icon-double-arrow.svg) center/cover no-repeat;
 }
 
-.faq__inner {
-  min-height: 0;
-  display: inline-block;
+.info__button button.first.active::after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.info__button.blue button {
+  background: #08c;
+}
+
+.faq__title {
+  margin-bottom: 30px;
+}
+
+.faq ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+}
+
+.faq li {
+  background: #ebedec;
+  border-radius: 15px;
+  padding: 20px 25px;
   position: relative;
-  left: 50%;
-  margin: 80px 0;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  -webkit-box-shadow: 0 10px 0 0 #2177b4 inset;
-          box-shadow: 0 10px 0 0 #2177b4 inset;
-  background-color: #fefffa;
-  max-width: 950px;
-  padding: 30px;
 }
 
-.faq__inner .transition, .faq__inner p, .faq__inner ul li i:before, .faq__inner ul li i:after {
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-
-.faq__inner .flipIn, .faq__inner h1, .faq__inner ul li {
-  -webkit-animation: flipdown 0.5s ease both;
-          animation: flipdown 0.5s ease both;
-}
-
-.faq__inner .no-select, .faq__inner h2 {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.faq__inner h1, .faq__inner h2 {
-  color: #2177b4;
-}
-
-.faq__inner h1 {
-  text-transform: uppercase;
-  font-size: 36px;
-  line-height: 42px;
-  letter-spacing: 3px;
-  font-weight: 100;
-}
-
-.faq__inner h2 {
-  font-size: 26px;
-  line-height: 34px;
-  font-weight: 300;
-  letter-spacing: 1px;
+.faq li::after {
+  content: '';
   display: block;
-  background-color: #fefffa;
-  margin: 0;
-  margin-right: 10px;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: url(../img/icon-double-arrow-black.svg) center/cover no-repeat;
+  right: 25px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+}
+
+@media (max-width: 578px) {
+  .faq li::after {
+    height: 15px;
+    width: 15px;
+    right: 15px;
+  }
+}
+
+.faq li.active::after {
+  -webkit-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
+}
+
+.faq h3 {
+  margin-bottom: 15px;
+  padding-right: 35px;
+  font-size: 20px;
   cursor: pointer;
 }
 
-.faq__inner p {
-  color: rgba(48, 69, 92, 0.8);
-  font-size: 17px;
-  line-height: 26px;
-  letter-spacing: 1px;
-  position: relative;
-  overflow: hidden;
-  max-height: 800px;
-  opacity: 1;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-  margin-top: 14px;
-  z-index: 2;
-}
-
-.faq__inner ul {
-  list-style: none;
-  -webkit-perspective: 900;
-          perspective: 900;
-  padding: 0;
-  margin: 0;
-}
-
-.faq__inner ul li {
-  position: relative;
-  padding: 0;
-  margin: 0;
-  padding-bottom: 4px;
-  padding-top: 18px;
-  border-top: 1px dotted #dce7eb;
-}
-
-.faq__inner ul li:nth-of-type(1) {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-
-.faq__inner ul li:nth-of-type(2) {
-  -webkit-animation-delay: 0.75s;
-          animation-delay: 0.75s;
-}
-
-.faq__inner ul li:nth-of-type(3) {
-  -webkit-animation-delay: 1.0s;
-          animation-delay: 1.0s;
-}
-
-.faq__inner ul li:last-of-type {
-  padding-bottom: 0;
-}
-
-.faq__inner ul li i {
-  position: absolute;
-  -webkit-transform: translate(-6px, 0);
-          transform: translate(-6px, 0);
-  margin-top: 10px;
-  right: 0;
-}
-
-.faq__inner ul li i:before, .faq__inner ul li i:after {
-  content: "";
-  position: absolute;
-  background-color: #2177b4;
-  width: 3px;
-  height: 9px;
-}
-
-.faq__inner ul li i:before {
-  -webkit-transform: translate(-2px, 0) rotate(45deg);
-          transform: translate(-2px, 0) rotate(45deg);
-}
-
-.faq__inner ul li i:after {
-  -webkit-transform: translate(2px, 0) rotate(-45deg);
-          transform: translate(2px, 0) rotate(-45deg);
-}
-
-.faq__inner ul li input[type=checkbox] {
-  position: absolute;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0;
-}
-
-.faq__inner ul li input[type=checkbox]:checked ~ p {
-  margin-top: 0;
-  max-height: 0;
-  opacity: 0;
-  -webkit-transform: translate(0, 50%);
-          transform: translate(0, 50%);
-}
-
-.faq__inner ul li input[type=checkbox]:checked ~ i:before {
-  -webkit-transform: translate(2px, 0) rotate(45deg);
-          transform: translate(2px, 0) rotate(45deg);
-}
-
-.faq__inner ul li input[type=checkbox]:checked ~ i:after {
-  -webkit-transform: translate(-2px, 0) rotate(-45deg);
-          transform: translate(-2px, 0) rotate(-45deg);
-}
-
-@-webkit-keyframes flipdown {
-  0% {
-    opacity: 0;
-    -webkit-transform-origin: top center;
-            transform-origin: top center;
-    -webkit-transform: rotateX(-90deg);
-            transform: rotateX(-90deg);
-  }
-  5% {
-    opacity: 1;
-  }
-  80% {
-    -webkit-transform: rotateX(8deg);
-            transform: rotateX(8deg);
-  }
-  83% {
-    -webkit-transform: rotateX(6deg);
-            transform: rotateX(6deg);
-  }
-  92% {
-    -webkit-transform: rotateX(-3deg);
-            transform: rotateX(-3deg);
-  }
-  100% {
-    -webkit-transform-origin: top center;
-            transform-origin: top center;
-    -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
+@media (max-width: 578px) {
+  .faq h3 {
+    font-size: 18px;
+    padding-right: 15px;
   }
 }
 
-@keyframes flipdown {
-  0% {
-    opacity: 0;
-    -webkit-transform-origin: top center;
-            transform-origin: top center;
-    -webkit-transform: rotateX(-90deg);
-            transform: rotateX(-90deg);
-  }
-  5% {
-    opacity: 1;
-  }
-  80% {
-    -webkit-transform: rotateX(8deg);
-            transform: rotateX(8deg);
-  }
-  83% {
-    -webkit-transform: rotateX(6deg);
-            transform: rotateX(6deg);
-  }
-  92% {
-    -webkit-transform: rotateX(-3deg);
-            transform: rotateX(-3deg);
-  }
-  100% {
-    -webkit-transform-origin: top center;
-            transform-origin: top center;
-    -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
-  }
+.faq p {
+  display: none;
+  font-size: 18px;
 }
 
-@media (max-width: 550px) {
-  .faq__inner {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
-    max-width: 100%;
-    min-height: 100%;
-    margin: 0;
-    margin-top: 20px;
-    left: 0;
-    padding-left: 0px;
-    padding-right: 0px;
+@media (max-width: 578px) {
+  .faq p {
+    font-size: 16px;
   }
 }
 
@@ -1397,58 +1432,68 @@ section {
   position: relative;
 }
 
+@media (max-width: 600px) {
+  .footer {
+    text-align: center;
+  }
+}
+
 .footer__inner {
   padding: 40px 0;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .footer__title {
   font-weight: 500;
-  text-transform: uppercase;
-  font-size: 15px;
-  text-align: center;
-  padding-bottom: 50px;
+  font-family: 'Fira Sans', serif;
+  font-size: 18px;
+  margin-bottom: 25px;
 }
 
-.footer .channels {
+.footer__tg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding-bottom: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  margin-bottom: 25px;
 }
 
-.footer .channels__item {
-  text-align: center;
-  padding: 0px 5px;
+@media (max-width: 600px) {
+  .footer__tg {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
-.footer .channels__item i {
-  font-size: 70px;
-  padding-bottom: 10px;
+.footer i {
+  font-size: 50px;
 }
 
-.footer .channels__item p:nth-child(3) {
-  padding-top: 10px;
-  font-size: 14px;
-}
-
-.footer__content {
+.footer__scroll-top img {
   display: block;
-  text-align: center;
+  width: 50px;
+  height: 50px;
 }
 
-.footer__content-one {
-  padding-bottom: 50px;
+@media (max-width: 600px) {
+  .footer__scroll-top {
+    display: none;
+  }
 }
 
-.footer__content button {
-  background-color: red;
+.footer button {
+  background-color: #ff4b55;
   color: white;
-  margin-bottom: 10px;
 }
 
 @media (max-width: 922px) {
@@ -1651,9 +1696,6 @@ section {
   .result__subtitle p::after {
     right: -40px;
   }
-  .result__title {
-    font-size: 14px;
-  }
   .result .benefits__item {
     max-width: 100%;
     padding-bottom: 30px;
@@ -1685,7 +1727,7 @@ section {
   }
   .legal__info-item {
     padding-left: 0px;
-    font-size: 12px;
+    font-size: 16px;
   }
   .legal__info-item::before {
     margin-left: 0px;
@@ -1698,11 +1740,6 @@ section {
     border-radius: 24px;
     padding: 10px;
     height: auto;
-  }
-  .legal .places__title {
-    line-height: 24px;
-    padding-bottom: 5px;
-    font-size: 15px;
   }
   .legal .places__content {
     font-size: 15px;
